💄 Add style to prevent wrapping in input groups
Add white-space: nowrap to .input-group to keep elements on a single line.

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -915,3 +915,7 @@ label.remove-image input {
   top: 2px;
   margin-left: 5px;
 }
+
+.input-group {
+  white-space: nowrap;
+}
